--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static dsfr_tags %}
+{% load static %}
 <!doctype html>
 <html lang="fr" data-fr-scheme="system" {% if SITE_CONFIG.mourning %}data-fr-mourning{% endif %}>
 
@@ -6,30 +6,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  {% dsfr_css %}
-  {% dsfr_favicon %}
   {% block extra_css %}{% endblock extra_css %}
 
   {% block title %}
   <title>
-    {% if title %}
-      {{ title }} — Design Système de l’État
-    {% else %}
-      Design Système de l’État
-    {% endif %}
+  Authentification
   </title>
   {% endblock title %}
 </head>
 
 <body>
     {% block skiplinks %}
-        {% dsfr_skiplinks skiplinks %}
+        {#  dsfr_skiplinks skiplinks #}
     {% endblock skiplinks %}
     {% include "blocks/header.html" %}
-    {% dsfr_theme_modale %}
+    {# dsfr_theme_modale  #}
 
     <div class="fr-container fr-mt-4w fr-mb-6w">
-      {% dsfr_breadcrumb %}
+     {# dsfr_breadcrumb  #}
 
       <main id="content" role="main">
         {% block content %}{% endblock content %}
@@ -38,7 +32,7 @@
 
     {% include "blocks/footer.html" %}
 
-  {% dsfr_js nonce=request.csp_nonce %}
+  {# dsfr_js nonce=request.csp_nonce #}
   {% block extra_js %}{% endblock extra_js %}
 </body>
 
